# RISC-V_SEAL

./: .gitignore  README.md  pk  test  test.c
SEAL_lib_original/seal/util/: config.h
SEAL_lib_reduced/seal/util/: config.h
basics/: Makefile  basicsSEAL.cpp  basics_gcc  simple.cpp
benchmarks/: .CMakeLists.txt.swp  CMakeCache.txt  CMakeLists.txt  benchmarks.cpp
libseal_src/: Makefile
libseal_src/seal/: ori.txt  this.txt
libseal_src/seal/util/: config.h
libseal_src/zstdlib/: depend.make
riscv_functions/barrett_reduce/: main.cpp
riscv_functions/multiply_accumulate/: CMakeLists.txt  main.cpp
testing/benchmarks/: CMakeLists.txt  basicsSEAL.cpp  bench.c  profiling.cpp
testing/profiling/: timing.h  utils.h
testing/profiling/general/: profiling.cpp
testing/profiling/general/mult/: profiling.cpp
testing/profiling/general/sums/: CMakeLists.txt  profiling.cpp
testing/profiling/multiplication/: profiling.cpp
